src/App.css
.App {
  text-align: center;

  font-family: "Nunito Sans", sans-serif;
}

/*darkmode style*/
.dark-mode {
  background-color:  hsl(207, 26%, 17%);
  color: hsl(0, 0%, 98%);
}

.light-mode {
  background-color: hsl(0, 0%, 98%);
  color: #333;
}
.card-light-mode {
  background-color: hsl(0, 0%, 100%);
}

.card-dark-mode {
  background-color: hsl(209, 23%, 22%)
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  /* background-color: #282c34; */
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  /* color: white; */
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/* myCss */
/*header*/
.header {
  height: 80px;
  /* background-color: hsl(0, 0%, 100%); */
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0;
  box-shadow: 1px 1px 7px hsl(0, 0%, 92%);
}

.header-left {
  font-size: 1.5rem;
  font-weight: 600;
  margin-left: 10%;
}

.header-right {
  margin-right: 10%;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.mode-icon {
  height: 25px;
  width: auto;
  display: flex;
  justify-content: center;
  margin-right: 5px;
}

.mode-text {
  margin: 0;
  padding: 0;
  justify-content: center;
  font-weight: 400;
}

/*Search and Filter*/

.search-and-filter {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-width: 80%;
  margin: 2rem auto;
}
@media (max-width: 400px) {
  .search-and-filter {
    flex-direction: column;
  }
  .search-container {
    margin-bottom: 2rem;
  }
}

/*search*/
.search-container {
  background-color: hsl(0, 0%, 100%);
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 45px;
  width: 300px;
  box-shadow: 1px 1px 7px hsl(0, 0%, 72%);
  border-radius: 5px;
}
.search-icon {
  height: 25px;
  width: auto;
  margin: 0 10px 0 10%;
}
.search-input {
  border: none;
  height: 45px;
  width: 100%;
}

/*filter*/

.container-region-filter {
  background-color: hsl(0, 0%, 100%);
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 45px;
  width: 300px;
  box-shadow: 1px 1px 7px hsl(0, 0%, 72%);
  border-radius: 5px;
}

.region-select {
  border: none;
  height: 45px;
  width: 100%;
}

/*country card*/

/* .country-card:not(:last-child) {
  margin-right: 2rem;
} */

.card-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  margin: auto 10%;
}

@media only screen and (max-width: 1440px) {
  .card-container {
    grid-template-columns: repeat(3, 1fr);
  }
}
@media only screen and (max-width: 1024px) {
  .card-container {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media only screen and (max-width: 768px) {
  .card-container {
    grid-template-columns: 1fr;
  }
}

/*style one card template*/
.country-card {
  border-radius: 5px;
  box-shadow: 1px 1px 7px hsl(0, 0%, 92%);
  max-width: 325px;
  min-width: 270px;

  overflow: hidden;
}
.container-flag {
  padding: 0;
  height: 50%;
}
.container-country-info {
  padding: 0;
  height: 55%;
  margin: 10% 10% auto 10%;
  text-align: left;
  font-size: 14px;
}

.container-country-info h1 {
  font-size: 1.3rem;
  margin-bottom: 10%;
}

.flag-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/*footer*/
.footer-container {
  margin: 20rem auto 0rem auto;
}

